mejorar seeder
